[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bmon"
description = "A high-level monitoring system for Bitcoin Core"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["bitcoin"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'importlib-metadata; python_version<"3.10"',
    'psycopg2',  # for postgresql support
    'django',
    'redis',
    'celery[redis]',
    'walrus',
]
version = "0.0.1"

[project.scripts]
bmon-parse = "bmon.logparse:main"
bmon-mon = "bmon.monitor:main"
bmon-server = "bmon.webapp:main"
bmon-migrate = "bmon.db:init_migrate"
bmon-watch-bitcoind = "bmon.bitcoind_worker.tasks:monitor_bitcoind_log"
# bmon-worker-bitcoind = "bmon.bitcoind_worker.tasks:run_worker"
# bmon-worker-server = "bmon.server_worker.tasks:run_worker"

[tool.setuptools]
packages = ["bmon"]
