[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bmon"
description = "A high-level monitoring system for Bitcoin Core"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["bitcoin"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'importlib-metadata; python_version<"3.10"',
    'psycopg2',  # for postgresql support
    'django',
    'redis',
    'huey',
    'walrus',
    'django-ninja',
    'whitenoise',
    'fastavro',
    'clii',
    'google-cloud-storage',
]
version = "0.0.1"

[project.scripts]
bmon-watch-bitcoind-logs = "bmon.bitcoind_tasks:watch_bitcoind_logs"
bmon-util = "bmon.util_cli:main"


[project.optional-dependencies]
tests = [
    'pytest',
    'pytest-django',
]

[tool.setuptools]
packages = ["bmon"]
