[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bmon"
description = "A high-level monitoring system for Bitcoin Core"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["bitcoin"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'importlib-metadata; python_version<"3.10"',
    'psycopg2',  # for postgresql support
    'django',
    'redis',
    'huey',
    'walrus',
    'django-ninja',
    'whitenoise',
    'fastavro',
    'clii',
    'google-cloud-storage',
    'prometheus-client',
    'sentry-sdk',
]
version = "0.0.1"

[project.scripts]
bmon-watch-bitcoind-logs = "bmon.bitcoind_tasks:watch_bitcoind_logs"
bmon-util = "bmon.util_cli:main"
bmon-bitcoind-monitor = "bmon.bitcoind_monitor:main"
bmon-server-monitor = "bmon.server_monitor:main"


[project.optional-dependencies]
tests = [
    'pytest',
    'pytest-django',
    'django-stubs',
    'mypy',
    'flake8',
    'types-redis',
]

[tool.setuptools]
packages = ["bmon"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = [
    "migrations/*",
    "bitcoin/rpc.py",
]

[[tool.mypy.overrides]]
module = [
    'walrus',
    'huey',
    'pygments',
    'pygments.*',
    'sqlparse',
    'clii',
    'google.*',
    'bmon_infra',
    'fscm.*',
]
ignore_missing_imports = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false

[tool.django-stubs]
django_settings_module = "bmon.settings"
