[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bmon-infra"
description = "Infra for bmon"
requires-python = ">=3.10"
keywords = ["bitcoin"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'importlib-metadata; python_version<"3.10"',
    'mitogen @ git+https://git@github.com/jamesob/mitogen.git',
    'fscm @ git+https://git@github.com/jamesob/fscm.git',
    'clii',
]
version = "0.0.1"

[project.scripts]
bmon-config = "bmon_infra.config:main"

[tool.setuptools]
packages = ["bmon_infra"]
